<resources>
    <!-- SHARED PREFS -->
    <string name="my_prefs">com.example.shotgun.my_prefs</string>
    <string name="username_key">USERNAME_KEY</string>
    <string name="guest">GUEST</string>

    <string name="app_name">Shotgun!</string>
    <string name="welcome">Welcome to Shotgun!</string>
    <string name="action_settings">Settings</string>
    <string name="action_find_friends">Connect</string>
    <string name="action_explore">Explore</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign-Up</string>
    <string name="title_activity_trip_feed">Trips</string>
    <string name="title_activity_create_trip">Create A Trip</string>
    <string name="title_activity_view_trip">View Trip</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_confirm_password">Confirm Password</string>


    <!--   GENERAL USE STRINGS   -->
    <string name="cancel">Cancel</string>
    <string name="cancel_cap">CANCEL</string>


    <!--    CREATE TRIP ACTIVITY     -->
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="location">Location</string>
    <string name="departTime">Depart</string>
    <string name="returnTime">Return</string>
    <string name="create">CREATE TRIP</string>

    <!--    DATE/TIME PICKER   -->
    <string name="set">Set</string>

    <!--  CREATE PROFILE ACTIVITY -->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="carCapacity">Car Capacity (Optional)</string>
    <string name="carMPG">Car MPG (Optional)</string>
    <string name="completeProfile">Complete Profile</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_set_up">Sign in</string>
    <string name="title_activity_create_profile">create profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_request_ride">Request a Ride</string>

    <!-- CONSTANTS -->
    <string-array name="us_states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <!--Settings Activity-->
    <string name="pref_title_user_view">User View</string>
    <string name="pref_summary_user_view">Choose which users can connect with you.</string>
    <string name="title_activity_map">MapActivity</string>


</resources>
