<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emanuel.shotgun.CreateProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/PageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_create_profile" />

            <EditText
                android:id="@+id/firstName"
                style="@style/EditText"
                android:hint="@string/firstName"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastName"
                style="@style/EditText"
                android:hint="@string/lastName"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/carCapacity"
                style="@style/EditText"
                android:hint="@string/carCapacity"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/carMPG"
                style="@style/EditText"
                android:hint="@string/carMPG"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="createProfile"
                android:text="@string/completeProfile" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
